Fix badge on post

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "HashtagPosts": {
-    "CouldNotFindAnyPostAssociatedWith": "Could not find any post associated with #"       
+    "CouldNotFindAnyPostAssociatedWith": "Could not find any post "       
   },
   "LoginCard":{
     "DontHaveAnAccount":"Don't have an account?",
