--- a/client/src/locales/es.json
+++ b/client/src/locales/es.json
@@ -1,6 +1,6 @@
 {
   "HashtagPosts": {
-    "CouldNotFindAnyPostAssociatedWith": "No pudimos encontrar publicaciones asociadas con el #"        
+    "CouldNotFindAnyPostAssociatedWith": "No pudimos encontrar publicaciones "        
   },  
   "LoginCard":{
     "DontHaveAnAccount":"¿Aún sin cuenta?",
